package edu.fiuba.algo3.modelo.Construccion;

import edu.fiuba.algo3.modelo.Unidades.Unidad;

public interface Creador {

    Unidad crearZangano();
    Unidad crearZerling();
    Unidad crearHidralisco();
    Unidad crearMutalisco();
    Unidad crearZealot();
    Unidad crearDragon();
    Unidad crearScout();

}
