package edu.fiuba.algo3.modelo.Construccion;

public class Energia implements Radio{

    @Override
    public void ampliarRadio() {

    }
}
