package edu.fiuba.algo3.modelo.Construccion;

public class Moho implements Radio{

    @Override
    public void ampliarRadio() {

    }
}
