package edu.fiuba.algo3.modelo.Construccion;

public interface Radio {

    void ampliarRadio();
}
