package edu.fiuba.algo3.modelo.Construccion;

public interface Refineria {

    void recolectar();
}
